<resources>
    <string name="app_name">Inventory App</string>

    <string name="main_activity_title">Inventory</string>
    <string name="details_activity_title">Product Details</string>
    <string name="add_activity_title">Add a Product</string>

    <string name="empty_view">Database empty. Please add a product</string>

    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_email">Supplier Email</string>

    <string name="intent_select_picture">Select picture</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="toast_require_name">Product requires a name</string>
    <string name="toast_require_quantity">Product requires a quantity</string>
    <string name="toast_require_price">Product requires a price</string>
    <string name="toast_require_image">Product requires an image</string>
    <string name="toast_require_supplier">Product requires a supplier</string>
    <string name="toast_require_supplier_email">Supplier requires an email address</string>

    <string name="editor_insert_product_failed">Failed to add product!</string>
    <string name="editor_insert_product_successful">Succesfully added product!</string>
    <string name="action_save">Save product</string>
    <string name="action_delete">Delete Product</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>
    <string name="editor_delete_product_failed">Deletion failed</string>
    <string name="editor_delete_product_successful">Deletion succesfull</string>
    <string name="details_update_product_failed">Update Failed</string>
    <string name="detail_update_product_successful">Update Succesful</string>
</resources>
